2008-09-21  Mark Probst  <mark.probst@gmail.com>

	* exceptions-ppc.c (mono_arch_get_call_filter): Fixed stack frame
	linking.

2008-09-19  Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to-ir.c: Extract stloc micro-optimization to a
	function and apply it to all cases.

2008-09-19  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c: Don't fail generic code sharing in cases we
	already support.

2008-09-18  Mark Probst  <mark.probst@gmail.com>

	* mini-ppc.c: Handle structs in tailcalls on Darwin.

Tue Sep 16 21:07:11 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* *.c, *.md, mini-ops.h: introduced relaxed_nop opcode for spin wait
	implementation.

Tue Sep 16 16:39:16 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* trace.c: make tracing more useful and correct, with per-thread
	id and indent info.

2008-09-15  Mark Probst  <mark.probst@gmail.com>

	* mini-ppc.c (mono_arch_emit_call): Convert floats to R4 when
	doing a method call and the argument is an R4.

2008-09-14  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (add_wrappers): Do not generate runtime invoke wrappers for
	generic methods.

2008-09-13  Mark Probst  <mark.probst@gmail.com>

	* mini-ppc.c: Convert result to single for OP_ICONV_TO_R4.

2008-09-12  Zoltan Varga  <vargaz@gmail.com>

	* mini.h (MONO_IS_JUMP_TABLE): Handle GOT_ENTRY.
	(MONO_JUMP_TABLE_FROM_INS): Ditto.

2008-09-11  Zoltan Varga  <vargaz@gmail.com>

	* driver.c: Add a --agent argument (not supported yet) to load managed
	agent assemblies before loading the main assembly, similarly to how the
	Java VM handles agents.

2008-09-11  Mark Probst  <mark.probst@gmail.com>

	* mini-ppc.c (mono_arch_allocate_vars): Use arch-independent
	function to do stack layout of local variables.

2008-09-11  Mark Probst  <mark.probst@gmail.com>

	* mini-ppc.c (calculate_sizes): Bugfix in sigcookie position
	calculation.

2008-09-11  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c ssa2.c mini.c mini-amd64.c decompose.c ssa.c abcremoval.c